--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.5.3
   intl: ^0.20.2
   flutter_native_splash: ^2.4.6
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
